# foil_cfd

./: .gitignore  BUILDING.md  CMakeLists.txt  FOILCFD_PLAN.md  LICENSE.md  README.md  build.bat
airfoils/: MANIFEST_README.md  aircraft_manifest.csv
assets/shaders/: mesh.frag  mesh.vert  particles.frag  particles.vert  qraycast.frag  qraycast.vert  slice.frag  slice.vert  tufts.frag  tufts.vert  volume.frag  volume.vert
docs/: CITATIONS.md
notes/: PERF.md  README.md  VALIDATION.md  integration_app.md  integration_geom.md  integration_render.md  integration_scaffold.md  integration_sim.md  integration_stl.md  integration_tests.md
scripts/: fetch_uiuc_airfoils.py
src/: main.cpp
src/app/: aircraft_manifest.cpp  aircraft_manifest.h  camera.cpp  camera.h  ui.cpp  ui.h
src/core/: vec.h
src/geom/: airfoil.cpp  airfoil.h  stl.cpp  stl.h  vg.cpp  vg.h  vg_audit.cpp  vg_audit.h  voxelizer.cpp  voxelizer.h  voxelizer_stl.cu  voxelizer_stl.cuh
src/platform/: gl_loader.cpp  platform.cpp  platform.h
src/render/: particles.cu  particles.cuh  tufts.cu  tufts.cuh  viz.cpp  viz.h
src/sim/: grid_stretch.h  lbm_core.cu  lbm_core.cuh  lbm_refine.cu  lbm_refine.cuh  lbm_solver.cpp  lbm_solver.h  lbm_wallmodel.cu  lbm_wallmodel.cuh  snapshot.cpp  snapshot.h  units.h  wall_model.cpp  wall_model.h
tests/: CMakeLists.txt  cuda_smoke.cu  lbm_test_util.h  m0_taylor_green.cpp  m1_cavity.cpp  m2_cylinder.cpp  m3_refine.cpp  m4_finer.cpp  m4_wallmodel.cpp  m5_integration.cpp  polar_ls413.cpp  test_airfoil.cpp  test_manifest.cpp  test_qlibb.cpp  test_units.cpp  test_util.h  test_vgaudit.cpp  test_voxelizer.cpp  test_wallmodel.cpp
validation/: README.md  polar_ls413_wm.csv
validation/nasa/: SOURCES.md
validation/nasa/digitized/: nasa_tmx72843_fig5_Re2.2e6_trip.csv  nasa_tmx72843_fig5_Re4.3e6_trip.csv  nasa_tmx72843_fig5_Re6.4e6_trip.csv  nasa_wentz_cr145139_fig2a_Re2.2e6_trip.csv
validation/xfoil/: polar_Re1.5M_N9_free.csv  polar_Re1.5M_N9_trip.csv  polar_Re3M_N9_free.csv  polar_Re3M_N9_trip.csv  polar_Re6M_N9_free.csv  polar_Re6M_N9_trip.csv
